Updated the layout to look nice on shorter desktop pages, to prevent white space under the footer

--- a/app/styles/theme/_layout.scss
+++ b/app/styles/theme/_layout.scss
@@ -1,5 +1,12 @@
+body {
+	background: #424242;
+}
+
+.page-content {
+	background: white;
+}
+
 h1 {
-	font-weight: 300;
 	line-height: 1;
 }
 
